# particle_issues_normaliser_in_TMs

./: .gitignore  BO0791.txt  BO0791_segmented.txt  README.md  TM0791.txt  pyproject.toml
.github/workflows/: CI.yml
data/: Failed_to_download_BOs.txt  Failed_to_download_TMs.txt  README.md  TM_files_with_issues.txt  TM_files_without_issues.txt  affix_counts_in_TMs.tsv  affix_reduced_file_names.txt  affix_reduced_file_names_but_with_error.txt  antx_annotation_transfer_error_log.txt  antx_annotation_transfer_log.txt  few_BO_EN_list.txt  filtered_TMs.txt  filtered_error_TMs.txt  filtered_error_tm_names.txt  filtered_tm_names.txt
data/filtered_tokenized_cleaned_TM_files/: TM0791.txt
src/: BO0790.txt  BO0790_segmented.txt  TM0790.txt  TM0790_cleaned.txt  affix_check_script.py  affix_cleaner.py  antxAnnotationTransfer.py  antx_annotation_transfer.py  bo_sentence_tokenizer_pipeline.py  config.py  filter_github_repos_by_initial_commit.py  new_TM0790.txt  path_definations.py  pipeline.py  repo_file_downloader.py  repo_file_uploader.py  tibetan_sentence_tokenizer_pipeline.py
src/affix_normaliser/: affix_check_script.py  affix_checker.py  affix_cleaner.py  antx_annotation_transfer.py  config.py  data_post_processor.py  file_utils.py  filter_github_repos_by_initial_commit.py  pipeline.py  repo_file_downloader.py  repo_file_uploader.py  tibetan_sentence_tokenizer_pipeline.py  verify_antx_modification.py
tests/: config.py  test_affix_cleaner.py  test_antx_annotation_transfer.py  test_data_post_processor.py  test_sentence_tokenizer_pipeline.py
(+6 files in other folders)
